Performed critical remediations based on Application Risk Management prioritization